--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   db:
     restart: unless-stopped
-    image: postgres
+    image: postgres:14.0
     volumes:
       - hayat_db:/var/lib/postgresql/data
     environment:
