--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
+    "@mui/x-date-pickers": "^5.0.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,6 +22,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.0",
+    "react-currency-input-field": "^3.6.5",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.0",
     "react-router-dom": "^6.4.0",
