fix alendar event filter in doctor

--- a/frontend/src/repositories/data/appointments.json
+++ b/frontend/src/repositories/data/appointments.json
@@ -3,64 +3,64 @@
     "id": 1,
     "title": "Лебедев Сергей Васильевич",
     "doctorId": "112",
-    "start": "2022-10-16T10:00:00.000Z",
-    "end": "2022-10-16T11:00:00.000Z"
+    "start": "2022-10-23T10:00:00.000Z",
+    "end": "2022-10-23T11:00:00.000Z"
   },
   {
     "id": 2,
     "title": "Мария Морозова",
     "doctorId": "112",
-    "start": "2022-10-14T05:30:00.000Z",
-    "end": "2022-10-14T07:00:00.000Z"
+    "start": "2022-10-21T05:30:00.000Z",
+    "end": "2022-10-21T07:00:00.000Z"
   },
   {
     "id": 3,
     "title": "Мария Морозова2",
     "doctorId": "112",
-    "start": "2022-10-14T04:00:00.000Z",
-    "end": "2022-10-14T05:00:00.000Z"
+    "start": "2022-10-21T04:00:00.000Z",
+    "end": "2022-10-21T05:00:00.000Z"
   },
   {
     "id": 4,
     "title": "Мария Морозова3",
     "doctorId": "112",
-    "start": "2022-10-14T03:00:00.000Z",
-    "end": "2022-10-14T04:00:00.000Z"
+    "start": "2022-10-21T03:00:00.000Z",
+    "end": "2022-10-21T04:00:00.000Z"
   },
   {
     "id": 5,
     "title": "Мария asdsadsa",
     "doctorId": "112",
-    "start": "2022-10-14T05:00:00.000Z",
-    "end": "2022-10-14T07:00:00.000Z"
+    "start": "2022-10-21T05:00:00.000Z",
+    "end": "2022-10-21T07:00:00.000Z"
   },
   {
     "id": 6,
     "title": "Мария Морозова5",
     "doctorId": "113",
-    "start": "2022-10-15T05:00:00.000Z",
-    "end": "2022-10-15T07:00:00.000Z"
+    "start": "2022-10-22T05:00:00.000Z",
+    "end": "2022-10-22T07:00:00.000Z"
   },
   {
     "id": 7,
     "title": "Мария Морозова6",
     "doctorId": "112",
-    "start": "2022-10-14T05:00:00.000Z",
-    "end": "2022-10-14T07:00:00.000Z"
+    "start": "2022-10-21T05:00:00.000Z",
+    "end": "2022-10-21T07:00:00.000Z"
   },
   {
     "id": 8,
     "title": "Мария Морозова7",
     "doctorId": "112",
-    "start": "2022-10-14T05:00:00.000Z",
-    "end": "2022-10-14T07:00:00.000Z"
+    "start": "2022-10-21T05:00:00.000Z",
+    "end": "2022-10-21T07:00:00.000Z"
   },
   {
     "id": 9,
     "title": "Мария Морозова8",
     "doctorId": "112",
-    "start": "2022-10-14T05:00:00.000Z",
-    "end": "2022-10-14T07:00:00.000Z"
+    "start": "2022-10-21T05:00:00.000Z",
+    "end": "2022-10-21T07:00:00.000Z"
   },
   {
     "id": 10,
@@ -82,5 +82,33 @@
     "doctorId": "112",
     "start": "2022-10-07T05:00:00.000Z",
     "end": "2022-10-07T07:00:00.000Z"
+  },
+  {
+    "id": 13,
+    "title": "Some name",
+    "doctorId": "112",
+    "start": "2022-10-22T05:00:00.000Z",
+    "end": "2022-10-22T07:00:00.000Z"
+  },
+  {
+    "id": 14,
+    "title": "Some Name2",
+    "doctorId": "112",
+    "start": "2022-10-22T05:00:00.000Z",
+    "end": "2022-10-22T07:00:00.000Z"
+  },
+  {
+    "id": 15,
+    "title": "Some Name2",
+    "doctorId": "112",
+    "start": "2022-10-22T07:00:00.000Z",
+    "end": "2022-10-22T08:00:00.000Z"
+  },
+  {
+    "id": 16,
+    "title": "Мария ова512",
+    "doctorId": "113",
+    "start": "2022-10-23T05:00:00.000Z",
+    "end": "2022-10-23T07:00:00.000Z"
   }
 ]
