--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,7 +3,9 @@ version: "3"
 services:
   db:
     restart: unless-stopped
-    image: postgres:14.0
+    image: postgres:15.0
+    ports:
+      - "5432:5432"
     volumes:
       - hayat_db:/var/lib/postgresql/data
     environment:
