--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,14 +16,18 @@
     "axios": "^1.1.3",
     "dayjs": "^1.11.6",
     "html-react-parser": "^3.0.4",
+    "html2canvas": "^1.4.1",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
+    "react-barcode": "^1.4.6",
     "react-big-calendar": "^1.5.0",
     "react-currency-input-field": "^3.6.5",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.11",
     "react-router": "^6.4.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
