--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     image: postgres:14.0
     volumes:
       - hayat_db:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     environment:
       - POSTGRES_DB=hayat
       - POSTGRES_USER=hayat
