send email when income/expance

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - POSTGRES_DB=hayat
       - POSTGRES_USER=hayat
       - POSTGRES_PASSWORD=hayat
+    ports:
+      - "5432:5432"
   web:
     restart: unless-stopped
     build: .
