--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     command: python manage.py runserver 0.0.0.0:8080
     volumes:
       - .:/app
+      - ./static:/app/static
     ports:
       - "8080:8080"
     environment:
@@ -29,3 +30,4 @@ services:
 volumes:
   hayat_db:
     driver: local
+  static:
