--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,11 @@
 # syntax=docker/dockerfile:1
-FROM python:3.6
+FROM python:3.7
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 WORKDIR /app
 COPY requirements.txt /app/
+RUN python -m pip install --upgrade pip
+
 RUN pip install -r requirements.txt
 COPY . /app/
 
