--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,14 @@
-Django>=3.2.16
-psycopg2>=2.8
-python-decouple==3.6
-djangorestframework==3.13
+Django
+psycopg2
+python-decouple
+djangorestframework
 djangorestframework-simplejwt
 drf-yasg
 django-cors-headers
 Pillow
-PyJWT==1.7.1
+PyJWT
 django-import-export
 django-filter
-passlib==1.7.4
-cryptography~=40.0.2
-xhtml2pdf~=0.2.11
+passlib
+cryptography
+xhtml2pdf
